updates customer pic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,11 @@
-/*Template Name: Fruitkha - Responsive Bootstrap4 Shop TemplateTemplate URI: Description: Bootstrap template for fruits or any other kind of shopAuthor: Imran HossainAuthor URI: https://imransdesign.com/Version: 1.0*/
+/*
+Template Name: Fruitkha - Responsive Bootstrap4 Shop Template
+Template URI: 
+Description: Bootstrap template for fruits or any other kind of shop
+Author: Imran Hossain
+Author URI: https://imransdesign.com/
+Version: 1.0
+*/
 /* -----------------------------------------------------------------------------
 
 # Base - Genral & Typography
@@ -845,7 +852,7 @@ a.mobile-show {
 
 ----------------------------------------------------------------------------- */
 .single-logo-item img {
-  max-width: 180px;
+  max-width: 280px;
   margin: 0 auto;
 }
 
